monticore-generator/src/test/resources/cocos/invalid/A4005/A4005.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4005;

grammar A4005 {
  A;

  B = ((C:A)*)?;

}
